# langset

./: .gitignore  .venv  EMISSION_PROTOCOL.md  README.md  mise.toml  pyproject.toml
.github/workflows/: pr.yml  release.yml
examples/: isolated_training_loop.py  quickstart.py
examples/danger-corridor/: danger_eval.py  gen_danger.py  train.py  train_modal.py
examples/ecosystem-cascade/: eco_eval.py  gen_eco.py  train.py  train_modal.py
examples/maze-superposition/: README.md  eval.py  gen_maze.py  geom_probe.py  train.py  train_modal.py
examples/ner-multi-latent/: README.md  play_cpu.py  prepare.py  train.py  train_modal.py
examples/sounds_like/: README.md  prepare.py  run_modal.py  setfit_compose.py  train.py
examples/sounds_like/data/: prepared.json
src/langset/: __init__.py  bridge_emission.py  data.py  emission_protocol.py  heads.py  masking.py  modeling.py  probes.py  selection.py  sigreg.py  st_module.py  strategies.py  trainer.py  training_args.py
tests/: golden_trainer.npz  golden_trainer_multi.npz  test_aux_heads.py  test_bridge_emission_smoke.py  test_continuous_rollout_stop.py  test_continuous_smoke.py  test_cot_emit.py  test_gradcache.py  test_gradcache_multi.py  test_hardneg_reaches_move.py  test_kv_cache.py  test_legalneg_reaches_legal_mass.py  test_moveneg_reaches_mass.py  test_probes.py  test_profiling_cpu.py  test_random_init.py  test_replay.py  test_sigreg_smoke.py  test_superposition.py  test_trainer_characterization.py  test_trainer_multi_characterization.py
