[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langset"
version = "0.11.0"
description = "A short path to a world model in your LLM: few-shot fine-tune it to predict in latent space (a JEPA world model) — or emit a single latent as a bespoke embedding model, SetFit-ready."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Stephen Solka" }]
dependencies = [
    "torch>=2.2",
    "transformers>=4.41",          # no upper bound -> modern backbones (Qwen3 etc.) work by default
    "peft>=0.13.2",
    "sentence-transformers>=3.0",
    "datasets>=2.15.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
# `pip install langset[setfit]` pins the VERIFIED SetFit-composition window. SetFit pins transformers>=4.41 but
# imports `default_logdir` (removed after 4.46); 4.46 + torch>=2.5 hits a torch.distributed.tensor bug. So:
setfit = ["setfit>=1.1.0", "transformers>=4.41,<4.47", "torch>=2.2,<2.5", "scikit-learn"]
wandb = ["wandb>=0.18"]
# world-model property probes (langset.probes): calibration_corr + linear_decodability
probes = ["scikit-learn", "scipy>=1.10"]
dev = ["pytest", "ruff", "scikit-learn", "scipy>=1.10"]

[tool.hatch.build.targets.wheel]
packages = ["src/langset"]

[tool.hatch.build.targets.sdist]
# src_proto/ is untracked scratch/prototype code — never ship it to PyPI (the wheel already
# only packages src/langset; this keeps the sdist from sweeping the scratch dir in).
exclude = ["/src_proto"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "ANN"]
ignore = [
    "E501",    # long lines are intentional — dense aligned inline-comment style; ruff format still reflows code
    "E702",    # dense `p = Path(x); p.mkdir()` single-line compound statements are a deliberate style here
    "ANN401",  # `Any` is the honest annotation for the torch / transformers / HF objects passed through the API
    "N806",    # single-letter math locals (H=hops, L=levels, B=batch, Lv=levels·vocab) are deliberate notation
    "N803",    # same math notation for function args
    "N812",    # `import torch.nn.functional as F` — F is the canonical alias
    "N814",    # constant-case import aliases, same reason
    "E741",    # l / L / I read as math notation in this codebase, not ambiguous names
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]   # test bodies don't need full type annotations
